mobile keyboard squashing content bug resolved

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,7 @@
 body{
     background-color: hsl(185, 41%, 84%);
     height: 100vh;
-    width: 100vw;
+    // min-width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
